applications/microservices/microservice-a/deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: microservice-a
  namespace: apps
spec:
  replicas: 2
  strategy:
    blueGreen:
      activeService: service-a
      previewService: service-a-preview
  selector:
    matchLabels:
      app: microservice-a
      app.kubernetes.io/name: microservice-a
      app.kubernetes.io/part-of: microservices
  template:
    metadata:
      labels:
        app: microservice-a
        app.kubernetes.io/name: microservice-a
        app.kubernetes.io/part-of: microservices
    spec:
      containers:
        - name: node-app
          image: node:20-alpine
          workingDir: /app
          command: ["node", "app.js"]
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: app-config
              mountPath: /app/app.js
              subPath: app.js
            - name: otel-modules
              mountPath: /otel
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
      volumes:
        - name: app-config
          configMap:
            name: microservice-a-app
            items:
              - key: app.js
                path: app.js
        - name: otel-modules
          emptyDir: {}
