applications/microservices/microservice-a/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a-preview
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: microservice-a
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
