applications/microservices/microservice-a/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-a-ingress
  namespace: apps
spec:
  ingressClassName: haproxy
  rules:
    - host: microservice-a.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-a
                port:
                  number: 80
